--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"react-native": "0.45.1",
 		"react-redux": "^5.0.5",
 		"redux": "^3.7.1",
+		"redux-thunk": "^2.2.0",
 		"reselect": "^3.0.1"
 	},
 	"devDependencies": {
