--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"dependencies": {
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.45.1",
+		"react-native-scrollable-tab-view": "^0.6.7",
 		"react-redux": "^5.0.5",
 		"redux": "^3.7.1",
 		"redux-thunk": "^2.2.0",
