--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
 	"dependencies": {
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.45.1",
+		"react-native-linear-gradient": "^2.2.0",
 		"react-native-scrollable-tab-view": "^0.6.7",
+		"react-navigation": "^1.0.0-beta.11",
 		"react-redux": "^5.0.5",
 		"redux": "^3.7.1",
 		"redux-thunk": "^2.2.0",
