--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"react-native": "0.45.1",
 		"react-native-linear-gradient": "^2.2.0",
 		"react-native-scrollable-tab-view": "^0.6.7",
+		"react-native-vector-icons": "^4.3.0",
 		"react-navigation": "^1.0.0-beta.11",
 		"react-redux": "^5.0.5",
 		"redux": "^3.7.1",
